Adapted for DEO System

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -13,4 +13,4 @@ title=PEO Custom Tile
 #XFLD,45
 peotile-display.flpTitle=PEO Custom Tile
 
-genericTile-title=PEO System Health
+genericTile-title=DEO System Health
